--- a/src/Angular2Spa/package.json
+++ b/src/Angular2Spa/package.json
@@ -1,44 +1,8 @@
 {
-  "name": "aspnetcore-angular2-universal-starter",
-  "version": "1.0.0-rc.1",
   "author": {
-    "name": "Mark Pieszak",
     "email": "mpieszak84@gmail.com",
+    "name": "Mark Pieszak",
     "url": "http://www.github.com/MarkPieszak"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/MarkPieszak/aspnetcore-angular2-universal.git"
-  },
-  "license": "MIT",
-  "scripts": {
-    "ci": "npm test && npm run e2e",
-    "clean": "npm cache clean && npm run rimraf -- node_modules doc typings coverage wwwroot/dist",
-    "clean:dist": "npm run rimraf -- wwwroot/dist",
-    "docs": "npm run typedoc -- --options typedoc.json --exclude '**/*.spec.ts' ./Client/",
-    "e2e": "npm run protractor",
-    "e2e:live": "npm run e2e -- --elementExplorer",
-    "lint": "npm run tslint \"Client/**/*.ts\"",
-    "postinstall": "npm run webpack-vendor && npm run webpack",
-    "posttest": "npm run coverage",
-    "postversion": "git push && git push --tags",
-    "pree2e": "npm run webdriver:update -- --standalone",
-    "pretest": "npm run lint",
-    "preversion": "npm test",
-    "protractor": "protractor",
-    "rimraf": "rimraf",
-    "start:dashboard": "npm run webpack-dashboard-pre && npm run webpack-dashboard -- webpack-dev-server--inline --hot --progress --port 3001",
-    "test": "karma start",
-    "tslint": "tslint",
-    "typedoc": "typedoc",
-    "version": "npm run build",
-    "webdriver:start": "npm run webdriver-manager start",
-    "webdriver:update": "npm run webdriver-manager update",
-    "webdriver-manager": "webdriver-manager",
-    "webpack": "webpack --progress",
-    "webpack-dashboard-pre": "npm run webpack -- --define dashboard",
-    "webpack-dashboard": "webpack-dashboard",
-    "webpack-vendor": "webpack --config webpack.config.vendor.js --progress"
   },
   "dependencies": {
     "@angular/common": "2.4.7",
@@ -65,17 +29,15 @@
     "@types/source-map": "0.1.28",
     "@types/uglify-js": "2.6.28",
     "@types/webpack": "1.12.35",
-    "angular2-template-loader": "0.6.0",
-    "awesome-typescript-loader": "3.0.0-beta.13 || ^3.0.0",
     "angular2-platform-node": "~2.1.0-rc.1",
+    "angular2-template-loader": "0.6.0",
     "angular2-universal": "~2.1.0-rc.1",
     "angular2-universal-polyfills": "~2.1.0-rc.1",
     "aspnet-prerendering": "^2.0.0",
     "aspnet-webpack": "^1.0.27",
+    "awesome-typescript-loader": "3.0.0-beta.13 || ^3.0.0",
     "bootstrap": "^4.0.0-alpha.5",
     "core-js": "^2.4.1",
-    "font-awesome": "^4.7.0",
-    "immutable": "3.8.1",
     "css": "^2.2.1",
     "css-loader": "^0.25.0",
     "es6-promise": "3.2.1",
@@ -83,26 +45,27 @@
     "expose-loader": "^0.7.1",
     "extract-text-webpack-plugin": "^2.0.0-rc",
     "file-loader": "^0.9.0",
+    "font-awesome": "^4.7.0",
     "html-loader": "^0.4.3",
+    "immutable": "3.8.1",
     "isomorphic-fetch": "^2.2.1",
+    "jquery": "^3.1.1",
     "js.clone": "0.0.3",
     "json-loader": "^0.5.4",
-    "jquery": "^3.1.1",
     "ng2-bootstrap": "1.3.0",
     "preboot": "^4.5.2",
-    "rxjs": "5.0.1",
-    "signalr": "^2.2.1",
-    "style-loader": "^0.13.1",
-    "to-string-loader": "^1.1.5",
-    "typed-immutable-record": "0.0.6",
-    "zone.js": "0.7.2",
     "raw-loader": "^0.5.1",
     "reflect-metadata": "^0.1.8",
+    "rxjs": "5.0.1",
+    "signalr": "^2.2.1",
     "source-map-loader": "0.1.5",
-    "ts-loader": "^1.1.0",
-    "ts-node": "^1.7.0",
+    "style-loader": "^0.13.1",
+    "to-string-loader": "^1.1.5",
     "tslint": "3.15.1",
     "tslint-loader": "2.1.5",
+    "ts-loader": "^1.1.0",
+    "ts-node": "^1.7.0",
+    "typed-immutable-record": "0.0.6",
     "typedoc": "0.5.1",
     "typescript": "2.0.10",
     "url-loader": "^0.5.7",
@@ -114,7 +77,8 @@
     "webpack-hot-middleware": "^2.15.0",
     "webpack-merge": "^0.15.0",
     "webpack-node-externals": "^1.5.4",
-    "yargs": "^6.6.0"
+    "yargs": "^6.6.0",
+    "zone.js": "0.7.2"
   },
   "devDependencies": {
     "codelyzer": "1.0.0-beta.4",
@@ -125,8 +89,8 @@
     "karma-mocha-reporter": "2.2.2",
     "karma-phantomjs-launcher": "1.0.2",
     "karma-remap-coverage": "0.1.2",
-    "karma-source-map-support": "1.2.0",
     "karma-sourcemap-loader": "0.3.7",
+    "karma-source-map-support": "1.2.0",
     "karma-webpack": "1.8.0",
     "phantomjs-polyfill": "0.0.2",
     "phantomjs-prebuilt": "2.1.13",
@@ -143,5 +107,41 @@
     "ts2",
     "webpack",
     "webpack2"
-  ]
+  ],
+  "license": "MIT",
+  "name": "aspnetcore-angular2-universal-starter",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/MarkPieszak/aspnetcore-angular2-universal.git"
+  },
+  "scripts": {
+    "ci": "npm test && npm run e2e",
+    "clean": "npm cache clean && npm run rimraf -- node_modules doc typings coverage wwwroot/dist",
+    "clean:dist": "npm run rimraf -- wwwroot/dist",
+    "docs": "npm run typedoc -- --options typedoc.json --exclude '**/*.spec.ts' ./Client/",
+    "e2e": "npm run protractor",
+    "e2e:live": "npm run e2e -- --elementExplorer",
+    "lint": "npm run tslint \"Client/**/*.ts\"",
+    "postinstall": "npm run webpack-vendor && npm run webpack",
+    "posttest": "npm run coverage",
+    "postversion": "git push && git push --tags",
+    "pree2e": "npm run webdriver:update -- --standalone",
+    "pretest": "npm run lint",
+    "preversion": "npm test",
+    "protractor": "protractor",
+    "rimraf": "rimraf",
+    "start:dashboard": "npm run webpack-dashboard-pre && npm run webpack-dashboard -- webpack-dev-server--inline --hot --progress --port 3001",
+    "test": "karma start",
+    "tslint": "tslint",
+    "typedoc": "typedoc",
+    "version": "npm run build",
+    "webdriver:start": "npm run webdriver-manager start",
+    "webdriver:update": "npm run webdriver-manager update",
+    "webdriver-manager": "webdriver-manager",
+    "webpack": "webpack --progress",
+    "webpack-dashboard": "webpack-dashboard",
+    "webpack-dashboard-pre": "npm run webpack -- --define dashboard",
+    "webpack-vendor": "webpack --config webpack.config.vendor.js --progress"
+  },
+  "version": "1.0.0-rc.1"
 }
