refactor: Moved asp.net core project into a separate folder "AspCoreServer"
The Angular2Spa folder was a mess with the node/spa code and the .net core code sharing the same folder.
This refactoring moves the core project to a separate folder and redirects the webpack dist folders to route to the correct places in the .net core folder.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,9 +6,9 @@
             "type": "coreclr",
             "request": "launch",
             "preLaunchTask": "build",
-            "program": "${workspaceRoot}/src/Angular2Spa/bin/Debug/netcoreapp1.1/Angular2Spa.dll",
+            "program": "${workspaceRoot}/src/AspCoreServer/bin/Debug/netcoreapp1.1/AspCoreServer.dll",
             "args": [],
-            "cwd": "${workspaceRoot}/src/Angular2Spa",
+            "cwd": "${workspaceRoot}/src/AspCoreServer",
             "stopAtEntry": false,
             "internalConsoleOptions": "openOnSessionStart",
             "launchBrowser": {
@@ -29,7 +29,7 @@
                 "ASPNETCORE_ENVIRONMENT": "Development"
             },
             "sourceFileMap": {
-                "/Views": "${workspaceRoot}/src/Angular2Spa/Views"
+                "/Views": "${workspaceRoot}/src/AspCoreServer/Views"
             }
         },
         {
@@ -37,7 +37,7 @@
             "type": "coreclr",
             "request": "launch",
             "preLaunchTask": "build",
-            "program": "${workspaceRoot}/bin/Debug/netcoreapp1.1/Angular2Spa.dll",
+            "program": "${workspaceRoot}/bin/Debug/netcoreapp1.1/AspCoreServer.dll",
             "args": [],
             "cwd": "${workspaceRoot}",
             "stopAtEntry": false,
