--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -37,7 +37,7 @@
             "type": "coreclr",
             "request": "launch",
             "preLaunchTask": "build",
-            "program": "${workspaceRoot}/bin/Debug/netcoreapp1.1/AspCoreServer.dll",
+            "program": "${workspaceRoot}/src/AspCoreServer/bin/Debug/netcoreapp1.1/AspCoreServer.dll",
             "args": [],
             "cwd": "${workspaceRoot}",
             "stopAtEntry": false,
@@ -60,7 +60,7 @@
                 "ASPNETCORE_ENVIRONMENT": "Production"
             },
             "sourceFileMap": {
-                "/Views": "${workspaceRoot}/Views"
+                "/Views": "${workspaceRoot}/src/AspCoreServer/Views"
             }
         },
         {
