refactor: Project restructure. Fixed the "dotnet publish" call
Had to move prepublish scripts into a cmd file in order to change the working folder and execute the npm and node commands.

--- a/src/AspCoreServer/project.json
+++ b/src/AspCoreServer/project.json
@@ -69,11 +69,7 @@
   },
   "scripts": {
     "postpublish": [ "dotnet publish-iis --publish-folder %publish:OutputPath% --framework %publish:FullTargetFramework%" ],
-    "prepublish": [
-      "npm install",
-      "node node_modules/webpack/bin/webpack.js --config webpack.config.vendor.js --env.prod",
-      "node node_modules/webpack/bin/webpack.js --env.prod"
-    ]
+    "prepublish": [ "prepublish.cmd"]
   },
   "tooling": {
     "defaultNamespace": "AspCoreServer"
