ASP.Net Publish option is getting error
Publish getting error - solved

--- a/src/AspCoreServer/project.json
+++ b/src/AspCoreServer/project.json
@@ -69,7 +69,7 @@
   },
   "scripts": {
     "postpublish": [ "dotnet publish-iis --publish-folder %publish:OutputPath% --framework %publish:FullTargetFramework%" ],
-    "prepublish": [ "prepublish.cmd"]
+    "prepublish": [ ".\\prepublish.cmd"]
   },
   "tooling": {
     "defaultNamespace": "AspCoreServer"
