--- a/.gitignore
+++ b/.gitignore
@@ -29,8 +29,8 @@ Obj/
 # Visual Studio 2015 cache/options directory
 .vs/
 
-/src/*/wwwroot/dist/
-/src/*/Client/dist/
+/wwwroot/dist/
+/Client/dist/
 
 # MSTest test Results
 [Tt]est[Rr]esult*/
