bug(chat): removed from demo for now

--- a/package.json
+++ b/package.json
@@ -27,9 +27,9 @@
     "aspnet-webpack": "^1.0.17",
     "awesome-typescript-loader": "^3.0.0",
     "bootstrap": "^3.3.7",
+    "core-js": "^2.4.1",
     "css": "^2.2.1",
     "css-loader": "^0.25.0",
-    "es6-shim": "^0.35.1",
     "event-source-polyfill": "^0.0.7",
     "expose-loader": "^0.7.1",
     "extract-text-webpack-plugin": "^2.0.0-rc",
