wip - aot upgrade
currently facing issues like
https://github.com/angular/angular-cli/issues/5802
cannot find browser-app.module.ngfactory

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,8 +10,7 @@
     "types": [ "node" ]
   },
   "include": [
-    "Client"
+    "Client/**/*.ts"
   ],
-  "exclude": [ "bin", "node_modules" ],
   "atom": { "rewriteTsconfig": false }
 }
