--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
     "test": "karma start Client/test/karma.conf.js",
     "postinstall": "npm run build:webpack",
     "build:webpack": "npm run webpack-vendor && npm run webpack",
+    "build:aot": "webpack --env.aot --env.client & webpack --env.aot --env.server",
+    "build:prod": "webpack --env.aot --env.client -p & webpack --env.aot --env.server",
     "webpack": "webpack --progress --color",
-    "webpack-vendor": "webpack --config webpack.config.vendor.js --progress --color",
-    "build:prod": "webpack --config webpack.config.vendor.js --env.prod --progress --color && webpack --env.prod --progress --color"
+    "webpack-vendor": "webpack --config webpack.config.vendor.js --progress --color"
   },
   "dependencies": {
     "@angular/animations": "^4.0.0",
@@ -21,7 +22,6 @@
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/platform-server": "^4.0.0",
     "@angular/router": "^4.0.0",
-    "@types/node": "^6.0.42",
     "angular2-template-loader": "0.6.0",
     "aspnet-prerendering": "^2.0.0",
     "aspnet-webpack": "^1.0.17",
@@ -41,6 +41,7 @@
     "ng2-signalr": "^2.0.2",
     "preboot": "^4.5.2",
     "raw-loader": "^0.5.1",
+    "rimraf": "^2.6.1",
     "rxjs": "^5.0.1",
     "signalr": "^2.2.1",
     "style-loader": "^0.13.1",
@@ -53,6 +54,7 @@
     "zone.js": "^0.7.6"
   },
   "devDependencies": {
+    "@ngtools/webpack": "^1.3.0",
     "@types/chai": "^3.4.34",
     "@types/jasmine": "^2.5.37",
     "chai": "^3.5.0",
