feat(AoT): :sparkles: :sparkles: added initial AoT support any many other things
Added Bootstrap with SCSS / SASS support
Added ng2-bootstrap
Passing Server originURL so that URLs can use it (when 4.1 comes out
with HttpInterceptors this will be even easier to do)

:sparkles: AoT added ! for prod (npm run build:aot)
- Still need to test this for Azure deployments etc

Removed es6-shim added core-js

--- a/Asp2017.csproj
+++ b/Asp2017.csproj
@@ -20,6 +20,11 @@
     <!-- Files not to publish (note that the 'dist' subfolders are re-added below) -->
     <Content Remove="Client\**" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Client\tsconfig.browser.json" />
+    <Content Include="Client\tsconfig.server.aot.json" />
+    <Content Include="Client\tsconfig.server.json" />
+  </ItemGroup>
   <Target Name="RunWebpack" AfterTargets="ComputeFilesToPublish">
     <!-- As part of publishing, ensure the JS resources are freshly built in production mode -->
     <Exec Command="npm install" />
