--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,19 @@
-{
+﻿{
   "compilerOptions": {
     "moduleResolution": "node",
+    "module": "es2015",
     "target": "es5",
-    "sourceMap": true,
+    "noImplicitAny": false,
+    "sourceMap": false,
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
-    "skipDefaultLibCheck": true,
-    "lib": [ "es2017", "dom" ],
+    "lib": [
+      "es2016",
+      "dom"
+    ],
     "types": [ "node" ]
   },
   "include": [
-    "Client/**/*.ts"
-  ],
-  "atom": { "rewriteTsconfig": false }
+    "client"
+  ]
 }
