--- a/package.json
+++ b/package.json
@@ -3,11 +3,9 @@
   "version": "1.0.0-rc3",
   "scripts": {
     "test": "karma start Client/test/karma.conf.js",
-    "postinstall": "npm run build:webpack",
-    "build:webpack": "npm run webpack-vendor && npm run webpack",
-    "webpack": "webpack --progress --color",
-    "webpack-vendor": "webpack --config webpack.config.vendor.js --progress --color",
-    "build:prod": "webpack --config webpack.config.vendor.js --env.prod --progress --color && webpack --env.prod --progress --color"
+    "postinstall": "npm run build:dev",
+    "build:dev": "webpack --progress --color",
+    "build:aot": "webpack --env.aot --env.client & webpack --env.aot --env.server"
   },
   "dependencies": {
     "@angular/animations": "^4.0.0",
@@ -21,12 +19,13 @@
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/platform-server": "^4.0.0",
     "@angular/router": "^4.0.0",
-    "@types/node": "^6.0.42",
+    "@types/node": "^7.0.12",
     "angular2-template-loader": "0.6.0",
     "aspnet-prerendering": "^2.0.0",
     "aspnet-webpack": "^1.0.17",
     "awesome-typescript-loader": "^3.0.0",
     "bootstrap": "^3.3.7",
+    "bootstrap-sass": "^3.3.7",
     "core-js": "^2.4.1",
     "css": "^2.2.1",
     "css-loader": "^0.25.0",
@@ -38,9 +37,11 @@
     "isomorphic-fetch": "^2.2.1",
     "jquery": "^2.2.1",
     "json-loader": "^0.5.4",
+    "ng2-bootstrap": "^1.6.1",
     "ng2-signalr": "^2.0.2",
     "preboot": "^4.5.2",
     "raw-loader": "^0.5.1",
+    "rimraf": "^2.6.1",
     "rxjs": "^5.0.1",
     "signalr": "^2.2.1",
     "style-loader": "^0.13.1",
@@ -53,6 +54,7 @@
     "zone.js": "^0.7.6"
   },
   "devDependencies": {
+    "@ngtools/webpack": "^1.3.0",
     "@types/chai": "^3.4.34",
     "@types/jasmine": "^2.5.37",
     "chai": "^3.5.0",
