--- a/package.json
+++ b/package.json
@@ -39,11 +39,12 @@
     "json-loader": "^0.5.4",
     "ng2-bootstrap": "^1.6.1",
     "ng2-signalr": "^2.0.2",
+    "ng2-translate": "^5.0.0",
+    "node-sass": "^4.5.2",
     "preboot": "^4.5.2",
     "raw-loader": "^0.5.1",
     "rimraf": "^2.6.1",
     "rxjs": "^5.0.1",
-    "node-sass": "^4.5.2",
     "sass-loader": "^6.0.3",
     "signalr": "^2.2.1",
     "style-loader": "^0.13.1",
