added translate module to app.module

--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/platform-server": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "@ngx-translate/core": "^6.0.1",
+    "@ngx-translate/http-loader": "0.0.3",
     "@types/node": "^7.0.12",
     "angular2-template-loader": "0.6.0",
     "aspnet-prerendering": "^2.0.0",
@@ -39,7 +41,6 @@
     "json-loader": "^0.5.4",
     "ng2-bootstrap": "^1.6.1",
     "ng2-signalr": "^2.0.2",
-    "ng2-translate": "^5.0.0",
     "node-sass": "^4.5.2",
     "preboot": "^4.5.2",
     "raw-loader": "^0.5.1",
