I18n support - Can switch between English and Norwegian (#155)
* added ng2-translate

* added translate module to app.module

* translation works but json location hardcoded...

* added buttons for switching language

* some more translations

* switching between english and norwegian works

Closes #111

--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/platform-server": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "@ngx-translate/core": "^6.0.1",
+    "@ngx-translate/http-loader": "0.0.3",
     "@types/node": "^7.0.12",
     "angular2-template-loader": "0.6.0",
     "aspnet-prerendering": "^2.0.0",
@@ -39,11 +41,11 @@
     "json-loader": "^0.5.4",
     "ng2-bootstrap": "^1.6.1",
     "ng2-signalr": "^2.0.2",
+    "node-sass": "^4.5.2",
     "preboot": "^4.5.2",
     "raw-loader": "^0.5.1",
     "rimraf": "^2.6.1",
     "rxjs": "^5.0.1",
-    "node-sass": "^4.5.2",
     "sass-loader": "^6.0.3",
     "signalr": "^2.2.1",
     "style-loader": "^0.13.1",
