Removed vendor webpack config

--- a/Asp2017.csproj
+++ b/Asp2017.csproj
@@ -34,6 +34,8 @@
     <Folder Include="Client\dist\" />
     <Folder Include="Client\dist\" />
     <Folder Include="Client\dist\" />
+    <Folder Include="Client\dist\" />
+    <Folder Include="wwwroot\dist\" />
     <Folder Include="wwwroot\dist\" />
     <Folder Include="wwwroot\dist\" />
     <Folder Include="wwwroot\dist\" />
