--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@ngx-translate/http-loader": "0.0.3",
     "@types/node": "^7.0.12",
     "angular2-template-loader": "0.6.0",
-    "aspnet-prerendering": "^2.0.0",
+    "aspnet-prerendering": "2.0.3",
     "aspnet-webpack": "^1.0.17",
     "awesome-typescript-loader": "^3.0.0",
     "bootstrap": "^3.3.7",
