--- a/Asp2017.csproj
+++ b/Asp2017.csproj
@@ -19,6 +19,7 @@
     <None Remove="yarn.lock" />
 	<Content Remove="wwwroot\dist\**" />
 	<None Remove="Client\dist\**" />
+    <Content Remove="coverage\**" />
 
     <!-- Files not to publish (note that the 'dist' subfolders are re-added below) -->
     <Content Remove="Client\**" />
