--- a/package.json
+++ b/package.json
@@ -2,9 +2,25 @@
   "name": "angular4-aspnetcore-universal",
   "version": "1.0.0-rc3",
   "scripts": {
-    "test": "karma start Client/test/karma.conf.js",
+    "test": "jest",
+    "test:watch": "npm run test -- --watch",
+    "test:ci": "npm run test -- --runInBand",
+    "test:coverage": "npm run test -- --coverage",
     "build:dev": "webpack --progress --color",
     "build:aot": "webpack --env.aot --env.client & webpack --env.aot --env.server"
+  },
+  "jest": {
+    "preset": "jest-preset-angular",
+    "setupTestFrameworkScriptFile": "./Client/test/setupJest.ts",
+    "globals": {
+      "__TS_CONFIG__": "Client/tsconfig.spec.json",
+      "__TRANSFORM_HTML__": true
+    },
+    "coveragePathIgnorePatterns": [
+      "/node_modules/",
+      "<rootDir>/Client/test/.*.ts"
+    ],
+    "coverageDirectory": "coverage"
   },
   "dependencies": {
     "@angular/animations": "^4.0.0",
@@ -60,15 +76,12 @@
     "@ngtools/webpack": "^1.3.0",
     "@types/chai": "^3.4.34",
     "@types/jasmine": "^2.5.37",
+    "@types/jest": "^19.2.3",
     "chai": "^3.5.0",
     "codelyzer": "^3.0.0-beta.4",
     "jasmine-core": "^2.5.2",
-    "karma": "^1.3.0",
-    "karma-chai": "^0.1.0",
-    "karma-chrome-launcher": "^2.0.0",
-    "karma-cli": "^1.0.1",
-    "karma-jasmine": "^1.0.2",
-    "karma-webpack": "^1.8.0",
+    "jest": "^20.0.0",
+    "jest-preset-angular": "^2.0.1",
     "tslint": "^4.5.1"
   }
 }
