--- a/package.json
+++ b/package.json
@@ -54,7 +54,6 @@
     "isomorphic-fetch": "^2.2.1",
     "jquery": "^2.2.1",
     "json-loader": "^0.5.4",
-
     "ng2-signalr": "^2.0.2",
     "ngx-bootstrap": "^1.7.1",
     "node-sass": "^4.5.2",
@@ -66,6 +65,7 @@
     "signalr": "^2.2.1",
     "style-loader": "^0.13.1",
     "to-string-loader": "^1.1.5",
+    "tslint": "^5.4.3",
     "typescript": "^2.3.2",
     "url-loader": "^0.5.7",
     "webpack": "^2.2.0",
@@ -82,7 +82,6 @@
     "codelyzer": "^3.0.0-beta.4",
     "jasmine-core": "^2.5.2",
     "jest": "^20.0.0",
-    "jest-preset-angular": "^2.0.1",
-    "tslint": "^4.5.1"
+    "jest-preset-angular": "^2.0.1"
   }
 }
