--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "jquery": "^2.2.1",
     "json-loader": "^0.5.4",
 
-    "ng2-signalr": "^2.0.2",
+    "ng2-signalr": "2.0.4",
     "ngx-bootstrap": "^1.7.1",
     "node-sass": "^4.5.2",
     "preboot": "^4.5.2",
@@ -66,7 +66,7 @@
     "signalr": "^2.2.1",
     "style-loader": "^0.13.1",
     "to-string-loader": "^1.1.5",
-    "typescript": "^2.3.2",
+    "typescript": "2.3.4",
     "url-loader": "^0.5.7",
     "webpack": "^2.2.0",
     "webpack-hot-middleware": "^2.12.2",
