WIP - Re-sync with JavaScriptServices (#376)
* WIP - Re-sync with JavaScriptServices

Main goal is to re-align a bit more with JavaScriptServices to ensure
people coming from there, wanting to add additional features, have an
easier time syncing with this repo.

Adds back vendor builds,
Adds back fast HMR (but waiting for
https://github.com/aspnet/JavaScriptServices/issues/1204)
AoT faster
Cleans up multiple tsconfigs
etc etc...

* fix gitignore

* fix HMR, VS builds, misc updates

* add package-lock to gitignore

closes #307 
closes #318 
closes #296 
closes #294 
closes #271 
closes #267 
closes #230 
closes #161

--- a/.gitignore
+++ b/.gitignore
@@ -35,7 +35,7 @@ Obj/
 .vs/
 
 /wwwroot/dist/
-/Client/dist/
+/ClientApp/dist/
 
 # MSTest test Results
 [Tt]est[Rr]esult*/
@@ -187,6 +187,7 @@ BundleArtifacts/
 !*.[Cc]ache/
 
 # Others
+*.db
 ClientBin/
 ~$*
 *~
@@ -259,3 +260,6 @@ _Pvt_Extensions
 
 # Jest Code Coverage report
 coverage/
+
+.DS_Store
+package-lock.json
