--- a/package.json
+++ b/package.json
@@ -77,15 +77,16 @@
     "zone.js": "^0.8.9"
   },
   "devDependencies": {
+    "@angular/cli": "^1.3.2",
     "@ngtools/webpack": "^1.3.0",
     "@types/chai": "^3.4.34",
     "@types/jasmine": "^2.5.37",
     "@types/jest": "^19.2.3",
     "chai": "^3.5.0",
     "codelyzer": "^3.0.0",
-    "tslint": "^5.0.0",
     "jasmine-core": "^2.5.2",
     "jest": "^20.0.0",
-    "jest-preset-angular": "^2.0.1"
+    "jest-preset-angular": "^2.0.1",
+    "tslint": "^5.0.0"
   }
 }
