--- a/package.json
+++ b/package.json
@@ -6,40 +6,44 @@
     "test:watch": "npm run test -- --watch",
     "test:ci": "npm run test -- --runInBand",
     "test:coverage": "npm run test -- --coverage",
-    "build:dev": "webpack --progress --color",
-    "build:aot": "webpack --env.aot --env.client & webpack --env.aot --env.server"
+    "build:dev": "npm run build:vendor && npm run build:webpack",
+    "build:webpack": "webpack --progress --color",
+    "build:prod": "npm run build:vendor -- --env.prod && npm run build:dev -- --env.prod",
+    "build:vendor": "webpack --config webpack.config.vendor.js --progress --color"
   },
   "jest": {
     "preset": "jest-preset-angular",
-    "setupTestFrameworkScriptFile": "./Client/test/setupJest.ts",
+    "setupTestFrameworkScriptFile": "./ClientApp/test/setupJest.ts",
     "globals": {
-      "__TS_CONFIG__": "Client/tsconfig.spec.json",
+      "__TS_CONFIG__": "ClientApp/tsconfig.spec.json",
       "__TRANSFORM_HTML__": true
     },
     "coveragePathIgnorePatterns": [
       "/node_modules/",
-      "<rootDir>/Client/test/.*.ts"
+      "<rootDir>/ClientApp/test/.*.ts"
     ],
     "coverageDirectory": "coverage"
   },
   "dependencies": {
-    "@angular/animations": "^4.0.0",
-    "@angular/common": "^4.0.0",
-    "@angular/compiler": "^4.0.0",
-    "@angular/compiler-cli": "^4.0.0",
-    "@angular/core": "^4.0.0",
-    "@angular/forms": "^4.0.0",
-    "@angular/http": "^4.0.0",
-    "@angular/platform-browser": "^4.0.0",
-    "@angular/platform-browser-dynamic": "^4.0.0",
-    "@angular/platform-server": "^4.0.0",
-    "@angular/router": "^4.0.0",
+    "@angular/animations": "^4.3.0",
+    "@angular/common": "^4.3.0",
+    "@angular/compiler": "^4.3.0",
+    "@angular/compiler-cli": "^4.3.0",
+    "@angular/core": "^4.3.0",
+    "@angular/forms": "^4.3.0",
+    "@angular/http": "^4.3.0",
+    "@angular/platform-browser": "^4.3.0",
+    "@angular/platform-browser-dynamic": "^4.3.0",
+    "@angular/platform-server": "^4.3.0",
+    "@angular/router": "^4.3.0",
+    "@nguniversal/aspnetcore-engine": "^1.0.0-beta.2",
     "@ngx-translate/core": "^6.0.1",
     "@ngx-translate/http-loader": "0.0.3",
     "@types/node": "^7.0.12",
+    "angular2-router-loader": "^0.3.4",
     "angular2-template-loader": "0.6.0",
     "aspnet-prerendering": "2.0.3",
-    "aspnet-webpack": "^1.0.17",
+    "aspnet-webpack": "^2.0.1",
     "awesome-typescript-loader": "^3.0.0",
     "bootstrap": "^3.3.7",
     "bootstrap-sass": "^3.3.7",
@@ -55,7 +59,7 @@
     "jquery": "^2.2.1",
     "json-loader": "^0.5.4",
     "ng2-signalr": "2.0.4",
-    "ngx-bootstrap": "^1.7.1",
+    "ngx-bootstrap": "^2.0.0-beta.2",
     "node-sass": "^4.5.2",
     "preboot": "^4.5.2",
     "raw-loader": "^0.5.1",
@@ -73,14 +77,16 @@
     "zone.js": "^0.8.9"
   },
   "devDependencies": {
+    "@angular/cli": "^1.3.2",
     "@ngtools/webpack": "^1.3.0",
     "@types/chai": "^3.4.34",
     "@types/jasmine": "^2.5.37",
     "@types/jest": "^19.2.3",
     "chai": "^3.5.0",
-    "codelyzer": "^3.0.0-beta.4",
+    "codelyzer": "^3.0.0",
     "jasmine-core": "^2.5.2",
     "jest": "^20.0.0",
-    "jest-preset-angular": "^2.0.1"
+    "jest-preset-angular": "^2.0.1",
+    "tslint": "^5.0.0"
   }
 }
