--- a/package.json
+++ b/package.json
@@ -2,27 +2,14 @@
   "name": "angular4-aspnetcore-universal",
   "version": "1.0.0-rc3",
   "scripts": {
-    "test": "jest",
-    "test:watch": "npm run test -- --watch",
+    "test": "karma start ClientApp/test/karma.conf.js",
+    "test:watch": "npm run test -- --auto-watch --no-single-run",
     "test:ci": "npm run test -- --runInBand",
     "test:coverage": "npm run test -- --coverage",
     "build:dev": "npm run build:vendor && npm run build:webpack",
     "build:webpack": "webpack --progress --color",
     "build:prod": "npm run build:vendor -- --env.prod && npm run build:webpack -- --env.prod",
     "build:vendor": "webpack --config webpack.config.vendor.js --progress --color"
-  },
-  "jest": {
-    "preset": "jest-preset-angular",
-    "setupTestFrameworkScriptFile": "./ClientApp/test/setupJest.ts",
-    "globals": {
-      "__TS_CONFIG__": "ClientApp/tsconfig.spec.json",
-      "__TRANSFORM_HTML__": true
-    },
-    "coveragePathIgnorePatterns": [
-      "/node_modules/",
-      "<rootDir>/ClientApp/test/.*.ts"
-    ],
-    "coverageDirectory": "coverage"
   },
   "dependencies": {
     "@angular/animations": "^4.3.0",
@@ -81,12 +68,19 @@
     "@ngtools/webpack": "^1.3.0",
     "@types/chai": "^3.4.34",
     "@types/jasmine": "^2.5.37",
-    "@types/jest": "^19.2.3",
     "chai": "^3.5.0",
     "codelyzer": "^3.0.0",
+    "istanbul-instrumenter-loader": "^3.0.0",
     "jasmine-core": "^2.5.2",
-    "jest": "^20.0.0",
-    "jest-preset-angular": "^2.0.1",
+    "karma": "^1.7.1",
+    "karma-chai": "^0.1.0",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-coverage": "^1.1.1",
+    "karma-jasmine": "^1.1.0",
+    "karma-mocha-reporter": "^2.2.4",
+    "karma-remap-coverage": "^0.1.4",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-webpack": "^2.0.3",
     "tslint": "^5.0.0"
   }
 }
