Added PhantomJS for running test in CI environments. Removed deprecated tslint rules and amended existing rules.

--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "angular4-aspnetcore-universal",
   "version": "1.0.0-rc3",
   "scripts": {
-    "test": "karma start ClientApp/test/karma.conf.js",
+    "lint": "tslint -p tsconfig.json",
+    "test": "npm run build:vendor && karma start ClientApp/test/karma.conf.js",
     "test:watch": "npm run test -- --auto-watch --no-single-run",
-    "test:ci": "npm run test -- --runInBand",
+    "test:ci": "npm run test -- --browsers PhantomJS_custom",
+    "test:ci:watch": "npm run test:ci -- --auto-watch --no-single-run",
     "test:coverage": "npm run test -- --coverage",
     "build:dev": "npm run build:vendor && npm run build:webpack",
     "build:webpack": "webpack --progress --color",
@@ -78,6 +80,7 @@
     "karma-coverage": "^1.1.1",
     "karma-jasmine": "^1.1.0",
     "karma-mocha-reporter": "^2.2.4",
+    "karma-phantomjs-launcher": "^1.0.4",
     "karma-remap-coverage": "^0.1.4",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^2.0.3",
