--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,12 +3,14 @@
     "moduleResolution": "node",
     "module": "es2015",
     "target": "es5",
+    "alwaysStrict": true,
     "noImplicitAny": false,
     "sourceMap": true,
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
     "skipDefaultLibCheck": true,
     "skipLibCheck": true,
+    "allowUnreachableCode": false,
     "lib": [
       "es2016",
       "dom"
