--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "jquery": "^2.2.1",
     "json-loader": "^0.5.4",
     "ng2-signalr": "2.0.4",
-    "ngx-bootstrap": "^2.0.0-beta.2",
+    "ngx-bootstrap": "2.0.0-beta.3",
     "node-sass": "^4.5.2",
     "preboot": "^5.0.0",
     "raw-loader": "^0.5.1",
