--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "isomorphic-fetch": "^2.2.1",
     "jquery": "^2.2.1",
     "json-loader": "^0.5.4",
-    "moment": "2.18.1"
+    "moment": "2.18.1",
     "ng2-signalr": "2.0.4",
     "ngx-bootstrap": "2.0.0-beta.3",
     "node-sass": "^4.5.2",
