--- a/package.json
+++ b/package.json
@@ -15,18 +15,19 @@
     "clean": "rimraf wwwroot/dist clientapp/dist"
   },
   "dependencies": {
-    "@angular/animations": "^5.0.0-rc.1",
-    "@angular/common": "^5.0.0-rc.1",
-    "@angular/compiler": "^5.0.0-rc.1",
-    "@angular/compiler-cli": "^5.0.0-rc.1",
-    "@angular/core": "^5.0.0-rc.1",
-    "@angular/forms": "^5.0.0-rc.1",
-    "@angular/http": "^5.0.0-rc.1",
-    "@angular/platform-browser": "^5.0.0-rc.1",
-    "@angular/platform-browser-dynamic": "^5.0.0-rc.1",
-    "@angular/platform-server": "^5.0.0-rc.1",
-    "@angular/router": "^5.0.0-rc.1",
-    "@nguniversal/aspnetcore-engine": "^5.0.0-beta.1",
+    "@angular/animations": "^5.0.0",
+    "@angular/common": "^5.0.0",
+    "@angular/compiler": "^5.0.0",
+    "@angular/compiler-cli": "^5.0.0",
+    "@angular/core": "^5.0.0",
+    "@angular/forms": "^5.0.0",
+    "@angular/http": "^5.0.0",
+    "@angular/platform-browser": "^5.0.0",
+    "@angular/platform-browser-dynamic": "^5.0.0",
+    "@angular/platform-server": "^5.0.0",
+    "@angular/router": "^5.0.0",
+    "@nguniversal/aspnetcore-engine": "^5.0.0-beta.5",
+    "@nguniversal/common": "^5.0.0-beta.5",
     "@ngx-translate/core": "^8.0.0",
     "@ngx-translate/http-loader": "^2.0.0",
     "@types/node": "^7.0.12",
@@ -66,8 +67,8 @@
     "zone.js": "^0.8.17"
   },
   "devDependencies": {
-    "@angular/cli": "^1.5.0-beta.4",
-    "@ngtools/webpack": "^1.5.0-beta.4",
+    "@angular/cli": "^1.5.0",
+    "@ngtools/webpack": "^1.8.0",
     "@types/chai": "^3.4.34",
     "@types/jasmine": "^2.5.37",
     "chai": "^3.5.0",
