Updating package dependencies

--- a/package.json
+++ b/package.json
@@ -15,22 +15,22 @@
     "clean": "rimraf wwwroot/dist clientapp/dist"
   },
   "dependencies": {
-    "@angular/animations": "^5.0.0",
-    "@angular/common": "^5.0.0",
-    "@angular/compiler": "^5.0.0",
-    "@angular/compiler-cli": "^5.0.0",
-    "@angular/core": "^5.0.0",
-    "@angular/forms": "^5.0.0",
-    "@angular/http": "^5.0.0",
-    "@angular/platform-browser": "^5.0.0",
-    "@angular/platform-browser-dynamic": "^5.0.0",
-    "@angular/platform-server": "^5.0.0",
-    "@angular/router": "^5.0.0",
+    "@angular/animations": "^5.0.1",
+    "@angular/common": "^5.0.1",
+    "@angular/compiler": "^5.0.1",
+    "@angular/compiler-cli": "^5.0.1",
+    "@angular/core": "^5.0.1",
+    "@angular/forms": "^5.0.1",
+    "@angular/http": "^5.0.1",
+    "@angular/platform-browser": "^5.0.1",
+    "@angular/platform-browser-dynamic": "^5.0.1",
+    "@angular/platform-server": "^5.0.1",
+    "@angular/router": "^5.0.1",
     "@nguniversal/aspnetcore-engine": "^5.0.0-beta.5",
     "@nguniversal/common": "^5.0.0-beta.5",
     "@ngx-translate/core": "^8.0.0",
     "@ngx-translate/http-loader": "^2.0.0",
-    "@types/node": "^7.0.12",
+    "@types/node": "^8.0.51",
     "angular2-router-loader": "^0.3.5",
     "angular2-template-loader": "^0.6.2",
     "aspnet-prerendering": "^3.0.1",
@@ -41,15 +41,15 @@
     "core-js": "^2.5.1",
     "css": "^2.2.1",
     "css-loader": "^0.28.7",
-    "event-source-polyfill": "^0.0.9",
+    "event-source-polyfill": "^0.0.11",
     "expose-loader": "^0.7.3",
     "extract-text-webpack-plugin": "^3.0.0",
-    "file-loader": "^0.11.2",
+    "file-loader": "^1.1.5",
     "html-loader": "^0.5.1",
     "isomorphic-fetch": "^2.2.1",
-    "jquery": "^2.2.1",
+    "jquery": "^3.2.1",
     "json-loader": "^0.5.4",
-    "moment": "2.18.1",
+    "moment": "^2.19.1",
     "ngx-bootstrap": "2.0.0-beta.6",
     "node-sass": "^4.5.2",
     "preboot": "^5.0.0",
@@ -57,10 +57,10 @@
     "rimraf": "^2.6.2",
     "rxjs": "^5.4.3",
     "sass-loader": "^6.0.6",
-    "style-loader": "^0.18.2",
+    "style-loader": "^0.19.0",
     "to-string-loader": "^1.1.5",
-    "typescript": "2.5.3",
-    "url-loader": "^0.5.7",
+    "typescript": "^2.6.1",
+    "url-loader": "^0.6.2",
     "webpack": "^3.6.0",
     "webpack-hot-middleware": "^2.19.1",
     "webpack-merge": "^4.1.0",
@@ -69,10 +69,10 @@
   "devDependencies": {
     "@angular/cli": "^1.5.0",
     "@ngtools/webpack": "^1.8.0",
-    "@types/chai": "^3.4.34",
-    "@types/jasmine": "^2.5.37",
-    "chai": "^3.5.0",
-    "codelyzer": "^3.0.0",
+    "@types/chai": "^4.0.4",
+    "@types/jasmine": "^2.6.3",
+    "chai": "^4.1.2",
+    "codelyzer": "^4.0.1",
     "istanbul-instrumenter-loader": "^3.0.0",
     "jasmine-core": "^2.5.2",
     "karma": "^1.7.1",
@@ -84,8 +84,8 @@
     "karma-phantomjs-launcher": "^1.0.4",
     "karma-remap-coverage": "^0.1.4",
     "karma-sourcemap-loader": "^0.3.7",
-    "karma-webpack": "^2.0.3",
+    "karma-webpack": "^2.0.6",
     "tslint": "^5.7.0",
-    "webpack-bundle-analyzer": "^2.9.0"
+    "webpack-bundle-analyzer": "^2.9.1"
   }
 }
