--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@angular/compiler": "^5.0.0",
     "@angular/compiler-cli": "^5.0.0",
     "@angular/core": "^5.0.0",
-    "@angular/forms": "^5.0.0",
+    "@angular/forms": "^5.0.2",
     "@angular/http": "^5.0.0",
     "@angular/platform-browser": "^5.0.0",
     "@angular/platform-browser-dynamic": "^5.0.0",
@@ -28,6 +28,8 @@
     "@angular/router": "^5.0.0",
     "@nguniversal/aspnetcore-engine": "^5.0.0-beta.5",
     "@nguniversal/common": "^5.0.0-beta.5",
+    "@ngx-formly/bootstrap": "^2.0.0-beta.6",
+    "@ngx-formly/core": "^2.0.0-beta.6",
     "@ngx-translate/core": "^8.0.0",
     "@ngx-translate/http-loader": "^2.0.0",
     "@types/node": "^7.0.12",
@@ -38,6 +40,7 @@
     "awesome-typescript-loader": "^3.0.0",
     "bootstrap": "^3.3.7",
     "bootstrap-sass": "^3.3.7",
+    "circular-json": "^0.4.0",
     "core-js": "^2.5.1",
     "css": "^2.2.1",
     "css-loader": "^0.28.7",
