--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
     "@angular/router": "^5.0.0",
     "@nguniversal/aspnetcore-engine": "^5.0.0-beta.5",
     "@nguniversal/common": "^5.0.0-beta.5",
-    "@ngx-formly/bootstrap": "^2.0.0-beta.6",
-    "@ngx-formly/core": "^2.0.0-beta.6",
+    "@ngx-formly/bootstrap": "^2.0.0-beta.8",
+    "@ngx-formly/core": "^2.0.0-beta.8",
     "@ngx-translate/core": "^8.0.0",
     "@ngx-translate/http-loader": "^2.0.0",
     "@types/node": "^7.0.12",
@@ -38,7 +38,7 @@
     "aspnet-prerendering": "^3.0.1",
     "aspnet-webpack": "^2.0.1",
     "awesome-typescript-loader": "^3.0.0",
-    "bootstrap": "^3.3.7",
+    "bootstrap": "^4.0.0-beta.2",
     "bootstrap-sass": "^3.3.7",
     "circular-json": "^0.4.0",
     "core-js": "^2.5.1",
@@ -50,11 +50,12 @@
     "file-loader": "^0.11.2",
     "html-loader": "^0.5.1",
     "isomorphic-fetch": "^2.2.1",
-    "jquery": "^2.2.1",
+    "jquery": "^3.2.1",
     "json-loader": "^0.5.4",
     "moment": "2.18.1",
     "ngx-bootstrap": "2.0.0-beta.6",
     "node-sass": "^4.5.2",
+    "popper.js": "^1.12.9",
     "preboot": "^5.0.0",
     "raw-loader": "^0.5.1",
     "rimraf": "^2.6.2",
